Cleanup & Restructuring Directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
 .idea
 out/
-res/spielerdaten_hölle.txt
-res/spielerdaten_normal.txt
+res/Scores/spielerdaten_hölle.txt
+res/Scores/spielerdaten_normal.txt
